<resources>
    <string name="app_name">메이플 위키</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">메이플스토리</string>
    <string name="nav_header_subtitle">tqkrwoqud830@naver.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">앱 설정</string>

    <string name="menu_home">Maplestory</string>
    <string name="menu_notice">공지사항</string>
    <string name="menu_update">업데이트 소식</string>
    <string name="menu_community">커뮤니티</string>
    <string name="menu_ranking">랭킹보기</string>
    <string name="menu_event">이벤트</string>

    <string name="home_second">Home Second</string>

    <string name="jobs_log_switch_off">최근 검색어 저장 기능이\n꺼져 있습니다.</string>
    <string name="jobs_log_nothing">최근 검색어 내역이\n없습니다.</string>
    <string name="search_result_nothing">검색 결과가 없습니다.</string>
</resources>
