<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="app.jaebyoung.maplestorywiki.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_notice"
        android:name="app.jaebyoung.maplestorywiki.notice.NoticeFragment"
        android:label="@string/menu_notice"
        tools:layout="@layout/fragment_notice" />

    <fragment
        android:id="@+id/nav_update"
        android:name="app.jaebyoung.maplestorywiki.update.UpdateFragment"
        android:label="@string/menu_update"
        tools:layout="@layout/fragment_update" />

    <fragment
        android:id="@+id/nav_community"
        android:name="app.jaebyoung.maplestorywiki.community.CommunityFragment"
        android:label="@string/menu_community"
        tools:layout="@layout/fragment_update" />

    <fragment
        android:id="@+id/nav_ranking"
        android:name="app.jaebyoung.maplestorywiki.ranking.RankingFragment"
        android:label="@string/menu_ranking"
        tools:layout="@layout/fragment_update" />

    <fragment
        android:id="@+id/nav_event"
        android:name="app.jaebyoung.maplestorywiki.event.EventFragment"
        android:label="@string/menu_event"
        tools:layout="@layout/fragment_update" />

</navigation>